compilador/src/compilador/y.output
   0  $accept : start $end

   1  $$1 :

   2  start : ID BEGIN $$1 body END
   3        | ID error
   4        | error

   5  body : retorno body
   6       | expresion body
   7       |

   8  $$2 :

   9  retorno : tipo FUN ID '(' parametro ')' $$2 BEGIN function END
  10          | tipo FUN error
  11          | FUN error
  12          | tipo ID '(' ')'

  13  function : RET '(' operacion ')' ';'
  14           | declaracion function
  15           | asignacion function
  16           | for function
  17           | print function
  18           | llamado_function ';' function
  19           | if_en_function
  20           | error ';'

  21  $$3 :

  22  $$4 :

  23  if_en_function : IF '(' condicion ')' $$3 THEN cuerpo_if $$4 body_if_function
  24                 | IF error
  25                 | IF '(' palabras_reservadas error

  26  $$5 :

  27  $$6 :

  28  body_if_function : return ELSE $$5 else $$6 return end_if
  29                   | return end_if function
  30                   | end_if function

  31  $$7 :

  32  $$8 :

  33  body_if_function : ELSE $$7 else $$8 end_if function

  34  return : RET '(' operacion ')' ';'

  35  bloque_compuesto : expresion
  36                   | expresion bloque_compuesto

  37  cuerpo_if : expresion
  38            | BEGIN bloque_compuesto END

  39  $$9 :

  40  $$10 :

  41  if : IF '(' condicion ')' $$9 THEN cuerpo_if $$10 body_if
  42     | IF error
  43     | IF '(' palabras_reservadas error

  44  $$11 :

  45  $$12 :

  46  body_if : ELSE $$11 else $$12 end_if
  47          | end_if

  48  end_if : END_IF ';'
  49         | error

  50  else : cuerpo_if
  51       | error

  52  expresion : declaracion
  53            | asignacion
  54            | if
  55            | for
  56            | print
  57            | llamado_function ';'
  58            | error ';'

  59  print : OUTF '(' MULTILINE ')' ';'
  60        | OUTF '(' operacion ')' ';'
  61        | OUTF '(' palabras_reservadas ')'
  62        | OUTF '(' ')'
  63        | OUTF '(' error
  64        | OUTF ')' error
  65        | OUTF ';' error

  66  declaracion : tipo lista_variables ';'
  67              | tipo lista_variables ASIGN lista_operaciones ';'
  68              | TYPEDEF PAIR '<' tipo '>' ID ';'
  69              | TYPEDEF '<' tipo '>' error
  70              | TYPEDEF PAIR tipo ID ';' error
  71              | TYPEDEF PAIR '<' tipo '>' ';' error

  72  asignacion : lista_variables ASIGN lista_operaciones ';'

  73  lista_variables : variable
  74                  | lista_variables ',' variable
  75                  | lista_variables ',' error

  76  variable : ID
  77           | ID '{' NUM '}'
  78           | ID '{' error

  79  operacion : operacion '+' multi_div
  80            | operacion '-' multi_div
  81            | multi_div

  82  multi_div : multi_div '*' valor
  83            | multi_div '/' valor
  84            | valor
  85            | error

  86  valor : variable
  87        | OCTAL
  88        | SINGLE
  89        | NUM
  90        | ID MULTILINE
  91        | NUM_PAIR
  92        | llamado_function
  93        | '-' valor

  94  lista_operaciones : operacion
  95                    | lista_operaciones ',' operacion

  96  llamado_function : ID '(' operacion ')'
  97                   | ID '(' ')' error

  98  parametro : tipo ID
  99            | tipo error
 100            | error ID
 101            | error

 102  tipo : ID
 103       | PAIR_TYPE
 104       | ULONGINT_TYPE
 105       | OCTAL_TYPE
 106       | SINGLE_TYPE

 107  palabras_reservadas : FOR
 108                      | BEGIN
 109                      | IF
 110                      | END
 111                      | END_IF
 112                      | ELSE

 113  comp : '='
 114       | NEQ
 115       | '>'
 116       | '<'
 117       | GE
 118       | LE
 119       | error

 120  condicion : '(' condicion ')'
 121            | valor comp valor
 122            |
 123            | valor valor

 124  $$13 :

 125  for : FOR '(' declaracion_For ';' condicion ';' incremento ')' $$13 cuerpo_for

 126  $$14 :

 127  for : FOR '(' declaracion_For ';' condicion ';' incremento ';' condicion ')' $$14 cuerpo_for
 128      | FOR error
 129      | FOR '(' error
 130      | FOR '(' declaracion_For condicion error
 131      | FOR '(' declaracion_For ';' condicion incremento error

 132  cuerpo_for : BEGIN expresion_multiple END ';'
 133             | expresion
 134             | error

 135  declaracion_For : ID ASIGN NUM
 136                  | ID ASIGN ID

 137  incremento : UP NUM
 138             | DOWN NUM
 139             | error ';'

 140  expresion_multiple : expresion expresion_multiple
 141                     | expresion

state 0
	$accept : . start $end  (0)

	error  shift 1
	ID  shift 2
	.  error

	start  goto 3


state 1
	start : error .  (4)

	.  reduce 4


state 2
	start : ID . BEGIN $$1 body END  (2)
	start : ID . error  (3)

	error  shift 4
	BEGIN  shift 5
	.  error


state 3
	$accept : start . $end  (0)

	$end  accept


state 4
	start : ID error .  (3)

	.  reduce 3


state 5
	start : ID BEGIN . $$1 body END  (2)
	$$1 : .  (1)

	.  reduce 1

	$$1  goto 6


state 6
	start : ID BEGIN $$1 . body END  (2)
	body : .  (7)

	error  shift 7
	FUN  shift 8
	ID  shift 9
	IF  shift 10
	OUTF  shift 11
	FOR  shift 12
	TYPEDEF  shift 13
	OCTAL_TYPE  shift 14
	PAIR_TYPE  shift 15
	ULONGINT_TYPE  shift 16
	SINGLE_TYPE  shift 17
	END  reduce 7

	body  goto 18
	retorno  goto 19
	expresion  goto 20
	tipo  goto 21
	declaracion  goto 22
	asignacion  goto 23
	for  goto 24
	print  goto 25
	llamado_function  goto 26
	if  goto 27
	lista_variables  goto 28
	variable  goto 29


state 7
	expresion : error . ';'  (58)

	';'  shift 30
	.  error


state 8
	retorno : FUN . error  (11)

	error  shift 31
	.  error


state 9
	variable : ID .  (76)
	variable : ID . '{' NUM '}'  (77)
	variable : ID . '{' error  (78)
	llamado_function : ID . '(' operacion ')'  (96)
	llamado_function : ID . '(' ')' error  (97)
	tipo : ID .  (102)

	'('  shift 32
	'{'  shift 33
	FUN  reduce 102
	ID  reduce 102
	ASIGN  reduce 76
	','  reduce 76


state 10
	if : IF . '(' condicion ')' $$9 THEN cuerpo_if $$10 body_if  (41)
	if : IF . error  (42)
	if : IF . '(' palabras_reservadas error  (43)

	error  shift 34
	'('  shift 35
	.  error


state 11
	print : OUTF . '(' MULTILINE ')' ';'  (59)
	print : OUTF . '(' operacion ')' ';'  (60)
	print : OUTF . '(' palabras_reservadas ')'  (61)
	print : OUTF . '(' ')'  (62)
	print : OUTF . '(' error  (63)
	print : OUTF . ')' error  (64)
	print : OUTF . ';' error  (65)

	'('  shift 36
	')'  shift 37
	';'  shift 38
	.  error


state 12
	for : FOR . '(' declaracion_For ';' condicion ';' incremento ')' $$13 cuerpo_for  (125)
	for : FOR . '(' declaracion_For ';' condicion ';' incremento ';' condicion ')' $$14 cuerpo_for  (127)
	for : FOR . error  (128)
	for : FOR . '(' error  (129)
	for : FOR . '(' declaracion_For condicion error  (130)
	for : FOR . '(' declaracion_For ';' condicion incremento error  (131)

	error  shift 39
	'('  shift 40
	.  error


state 13
	declaracion : TYPEDEF . PAIR '<' tipo '>' ID ';'  (68)
	declaracion : TYPEDEF . '<' tipo '>' error  (69)
	declaracion : TYPEDEF . PAIR tipo ID ';' error  (70)
	declaracion : TYPEDEF . PAIR '<' tipo '>' ';' error  (71)

	PAIR  shift 41
	'<'  shift 42
	.  error


state 14
	tipo : OCTAL_TYPE .  (105)

	.  reduce 105


state 15
	tipo : PAIR_TYPE .  (103)

	.  reduce 103


state 16
	tipo : ULONGINT_TYPE .  (104)

	.  reduce 104


state 17
	tipo : SINGLE_TYPE .  (106)

	.  reduce 106


state 18
	start : ID BEGIN $$1 body . END  (2)

	END  shift 43
	.  error


state 19
	body : retorno . body  (5)
	body : .  (7)

	error  shift 7
	FUN  shift 8
	ID  shift 9
	IF  shift 10
	OUTF  shift 11
	FOR  shift 12
	TYPEDEF  shift 13
	OCTAL_TYPE  shift 14
	PAIR_TYPE  shift 15
	ULONGINT_TYPE  shift 16
	SINGLE_TYPE  shift 17
	END  reduce 7

	body  goto 44
	retorno  goto 19
	expresion  goto 20
	tipo  goto 21
	declaracion  goto 22
	asignacion  goto 23
	for  goto 24
	print  goto 25
	llamado_function  goto 26
	if  goto 27
	lista_variables  goto 28
	variable  goto 29


state 20
	body : expresion . body  (6)
	body : .  (7)

	error  shift 7
	FUN  shift 8
	ID  shift 9
	IF  shift 10
	OUTF  shift 11
	FOR  shift 12
	TYPEDEF  shift 13
	OCTAL_TYPE  shift 14
	PAIR_TYPE  shift 15
	ULONGINT_TYPE  shift 16
	SINGLE_TYPE  shift 17
	END  reduce 7

	body  goto 45
	retorno  goto 19
	expresion  goto 20
	tipo  goto 21
	declaracion  goto 22
	asignacion  goto 23
	for  goto 24
	print  goto 25
	llamado_function  goto 26
	if  goto 27
	lista_variables  goto 28
	variable  goto 29


state 21
	retorno : tipo . FUN ID '(' parametro ')' $$2 BEGIN function END  (9)
	retorno : tipo . FUN error  (10)
	retorno : tipo . ID '(' ')'  (12)
	declaracion : tipo . lista_variables ';'  (66)
	declaracion : tipo . lista_variables ASIGN lista_operaciones ';'  (67)

	FUN  shift 46
	ID  shift 47
	.  error

	lista_variables  goto 48
	variable  goto 29


state 22
	expresion : declaracion .  (52)

	.  reduce 52


state 23
	expresion : asignacion .  (53)

	.  reduce 53


state 24
	expresion : for .  (55)

	.  reduce 55


state 25
	expresion : print .  (56)

	.  reduce 56


state 26
	expresion : llamado_function . ';'  (57)

	';'  shift 49
	.  error


state 27
	expresion : if .  (54)

	.  reduce 54


state 28
	asignacion : lista_variables . ASIGN lista_operaciones ';'  (72)
	lista_variables : lista_variables . ',' variable  (74)
	lista_variables : lista_variables . ',' error  (75)

	ASIGN  shift 50
	','  shift 51
	.  error


state 29
	lista_variables : variable .  (73)

	.  reduce 73


state 30
	expresion : error ';' .  (58)

	.  reduce 58


state 31
	retorno : FUN error .  (11)

	.  reduce 11


state 32
	llamado_function : ID '(' . operacion ')'  (96)
	llamado_function : ID '(' . ')' error  (97)

	error  shift 52
	SINGLE  shift 53
	ID  shift 54
	NUM  shift 55
	NUM_PAIR  shift 56
	OCTAL  shift 57
	')'  shift 58
	'-'  shift 59
	.  error

	operacion  goto 60
	llamado_function  goto 61
	variable  goto 62
	multi_div  goto 63
	valor  goto 64


state 33
	variable : ID '{' . NUM '}'  (77)
	variable : ID '{' . error  (78)

	error  shift 65
	NUM  shift 66
	.  error


state 34
	if : IF error .  (42)

	.  reduce 42


state 35
	if : IF '(' . condicion ')' $$9 THEN cuerpo_if $$10 body_if  (41)
	if : IF '(' . palabras_reservadas error  (43)
	condicion : .  (122)

	SINGLE  shift 53
	ID  shift 54
	BEGIN  shift 67
	END  shift 68
	END_IF  shift 69
	IF  shift 70
	ELSE  shift 71
	NUM  shift 55
	FOR  shift 72
	NUM_PAIR  shift 56
	OCTAL  shift 57
	'('  shift 73
	'-'  shift 59
	')'  reduce 122

	llamado_function  goto 61
	condicion  goto 74
	palabras_reservadas  goto 75
	variable  goto 62
	valor  goto 76


state 36
	print : OUTF '(' . MULTILINE ')' ';'  (59)
	print : OUTF '(' . operacion ')' ';'  (60)
	print : OUTF '(' . palabras_reservadas ')'  (61)
	print : OUTF '(' . ')'  (62)
	print : OUTF '(' . error  (63)

	error  shift 77
	MULTILINE  shift 78
	SINGLE  shift 53
	ID  shift 54
	BEGIN  shift 67
	END  shift 68
	END_IF  shift 69
	IF  shift 70
	ELSE  shift 71
	NUM  shift 55
	FOR  shift 72
	NUM_PAIR  shift 56
	OCTAL  shift 57
	')'  shift 79
	'-'  shift 59
	.  error

	operacion  goto 80
	llamado_function  goto 61
	palabras_reservadas  goto 81
	variable  goto 62
	multi_div  goto 63
	valor  goto 64


state 37
	print : OUTF ')' . error  (64)

	error  shift 82
	.  error


state 38
	print : OUTF ';' . error  (65)

	error  shift 83
	.  error


state 39
	for : FOR error .  (128)

	.  reduce 128


state 40
	for : FOR '(' . declaracion_For ';' condicion ';' incremento ')' $$13 cuerpo_for  (125)
	for : FOR '(' . declaracion_For ';' condicion ';' incremento ';' condicion ')' $$14 cuerpo_for  (127)
	for : FOR '(' . error  (129)
	for : FOR '(' . declaracion_For condicion error  (130)
	for : FOR '(' . declaracion_For ';' condicion incremento error  (131)

	error  shift 84
	ID  shift 85
	.  error

	declaracion_For  goto 86


state 41
	declaracion : TYPEDEF PAIR . '<' tipo '>' ID ';'  (68)
	declaracion : TYPEDEF PAIR . tipo ID ';' error  (70)
	declaracion : TYPEDEF PAIR . '<' tipo '>' ';' error  (71)

	ID  shift 87
	OCTAL_TYPE  shift 14
	PAIR_TYPE  shift 15
	ULONGINT_TYPE  shift 16
	SINGLE_TYPE  shift 17
	'<'  shift 88
	.  error

	tipo  goto 89


state 42
	declaracion : TYPEDEF '<' . tipo '>' error  (69)

	ID  shift 87
	OCTAL_TYPE  shift 14
	PAIR_TYPE  shift 15
	ULONGINT_TYPE  shift 16
	SINGLE_TYPE  shift 17
	.  error

	tipo  goto 90


state 43
	start : ID BEGIN $$1 body END .  (2)

	.  reduce 2


state 44
	body : retorno body .  (5)

	.  reduce 5


state 45
	body : expresion body .  (6)

	.  reduce 6


state 46
	retorno : tipo FUN . ID '(' parametro ')' $$2 BEGIN function END  (9)
	retorno : tipo FUN . error  (10)

	error  shift 91
	ID  shift 92
	.  error


state 47
	retorno : tipo ID . '(' ')'  (12)
	variable : ID .  (76)
	variable : ID . '{' NUM '}'  (77)
	variable : ID . '{' error  (78)

	'('  shift 93
	'{'  shift 33
	ASIGN  reduce 76
	';'  reduce 76
	','  reduce 76


state 48
	declaracion : tipo lista_variables . ';'  (66)
	declaracion : tipo lista_variables . ASIGN lista_operaciones ';'  (67)
	lista_variables : lista_variables . ',' variable  (74)
	lista_variables : lista_variables . ',' error  (75)

	ASIGN  shift 94
	';'  shift 95
	','  shift 51
	.  error


state 49
	expresion : llamado_function ';' .  (57)

	.  reduce 57


state 50
	asignacion : lista_variables ASIGN . lista_operaciones ';'  (72)

	error  shift 52
	SINGLE  shift 53
	ID  shift 54
	NUM  shift 55
	NUM_PAIR  shift 56
	OCTAL  shift 57
	'-'  shift 59
	.  error

	operacion  goto 96
	llamado_function  goto 61
	lista_operaciones  goto 97
	variable  goto 62
	multi_div  goto 63
	valor  goto 64


state 51
	lista_variables : lista_variables ',' . variable  (74)
	lista_variables : lista_variables ',' . error  (75)

	error  shift 98
	ID  shift 99
	.  error

	variable  goto 100


state 52
	multi_div : error .  (85)

	.  reduce 85


state 53
	valor : SINGLE .  (88)

	.  reduce 88


state 54
	variable : ID .  (76)
	variable : ID . '{' NUM '}'  (77)
	variable : ID . '{' error  (78)
	valor : ID . MULTILINE  (90)
	llamado_function : ID . '(' operacion ')'  (96)
	llamado_function : ID . '(' ')' error  (97)

	MULTILINE  shift 101
	'('  shift 32
	'{'  shift 33
	error  reduce 76
	SINGLE  reduce 76
	ID  reduce 76
	NEQ  reduce 76
	GE  reduce 76
	LE  reduce 76
	NUM  reduce 76
	UP  reduce 76
	DOWN  reduce 76
	NUM_PAIR  reduce 76
	OCTAL  reduce 76
	')'  reduce 76
	';'  reduce 76
	'<'  reduce 76
	'>'  reduce 76
	','  reduce 76
	'+'  reduce 76
	'-'  reduce 76
	'*'  reduce 76
	'/'  reduce 76
	'='  reduce 76


state 55
	valor : NUM .  (89)

	.  reduce 89


state 56
	valor : NUM_PAIR .  (91)

	.  reduce 91


state 57
	valor : OCTAL .  (87)

	.  reduce 87


state 58
	llamado_function : ID '(' ')' . error  (97)

	error  shift 102
	.  error


state 59
	valor : '-' . valor  (93)

	SINGLE  shift 53
	ID  shift 54
	NUM  shift 55
	NUM_PAIR  shift 56
	OCTAL  shift 57
	'-'  shift 59
	.  error

	llamado_function  goto 61
	variable  goto 62
	valor  goto 103


state 60
	operacion : operacion . '+' multi_div  (79)
	operacion : operacion . '-' multi_div  (80)
	llamado_function : ID '(' operacion . ')'  (96)

	')'  shift 104
	'+'  shift 105
	'-'  shift 106
	.  error


state 61
	valor : llamado_function .  (92)

	.  reduce 92


state 62
	valor : variable .  (86)

	.  reduce 86


state 63
	operacion : multi_div .  (81)
	multi_div : multi_div . '*' valor  (82)
	multi_div : multi_div . '/' valor  (83)

	'*'  shift 107
	'/'  shift 108
	')'  reduce 81
	';'  reduce 81
	','  reduce 81
	'+'  reduce 81
	'-'  reduce 81


state 64
	multi_div : valor .  (84)

	.  reduce 84


state 65
	variable : ID '{' error .  (78)

	.  reduce 78


state 66
	variable : ID '{' NUM . '}'  (77)

	'}'  shift 109
	.  error


state 67
	palabras_reservadas : BEGIN .  (108)

	.  reduce 108


state 68
	palabras_reservadas : END .  (110)

	.  reduce 110


state 69
	palabras_reservadas : END_IF .  (111)

	.  reduce 111


state 70
	palabras_reservadas : IF .  (109)

	.  reduce 109


state 71
	palabras_reservadas : ELSE .  (112)

	.  reduce 112


state 72
	palabras_reservadas : FOR .  (107)

	.  reduce 107


state 73
	condicion : '(' . condicion ')'  (120)
	condicion : .  (122)

	SINGLE  shift 53
	ID  shift 54
	NUM  shift 55
	NUM_PAIR  shift 56
	OCTAL  shift 57
	'('  shift 73
	'-'  shift 59
	')'  reduce 122

	llamado_function  goto 61
	condicion  goto 110
	variable  goto 62
	valor  goto 76


state 74
	if : IF '(' condicion . ')' $$9 THEN cuerpo_if $$10 body_if  (41)

	')'  shift 111
	.  error


state 75
	if : IF '(' palabras_reservadas . error  (43)

	error  shift 112
	.  error


state 76
	condicion : valor . comp valor  (121)
	condicion : valor . valor  (123)

	error  shift 113
	SINGLE  shift 53
	ID  shift 54
	NEQ  shift 114
	GE  shift 115
	LE  shift 116
	NUM  shift 55
	NUM_PAIR  shift 56
	OCTAL  shift 57
	'<'  shift 117
	'>'  shift 118
	'-'  shift 59
	'='  shift 119
	.  error

	llamado_function  goto 61
	variable  goto 62
	valor  goto 120
	comp  goto 121


state 77
	print : OUTF '(' error .  (63)
	multi_div : error .  (85)

	error  reduce 63
	FUN  reduce 63
	ID  reduce 63
	END  reduce 63
	END_IF  reduce 63
	IF  reduce 63
	ELSE  reduce 63
	RET  reduce 63
	OUTF  reduce 63
	FOR  reduce 63
	TYPEDEF  reduce 63
	OCTAL_TYPE  reduce 63
	PAIR_TYPE  reduce 63
	ULONGINT_TYPE  reduce 63
	SINGLE_TYPE  reduce 63
	')'  reduce 85
	'+'  reduce 85
	'-'  reduce 85
	'*'  reduce 85
	'/'  reduce 85


state 78
	print : OUTF '(' MULTILINE . ')' ';'  (59)

	')'  shift 122
	.  error


state 79
	print : OUTF '(' ')' .  (62)

	.  reduce 62


state 80
	print : OUTF '(' operacion . ')' ';'  (60)
	operacion : operacion . '+' multi_div  (79)
	operacion : operacion . '-' multi_div  (80)

	')'  shift 123
	'+'  shift 105
	'-'  shift 106
	.  error


state 81
	print : OUTF '(' palabras_reservadas . ')'  (61)

	')'  shift 124
	.  error


state 82
	print : OUTF ')' error .  (64)

	.  reduce 64


state 83
	print : OUTF ';' error .  (65)

	.  reduce 65


state 84
	for : FOR '(' error .  (129)

	.  reduce 129


state 85
	declaracion_For : ID . ASIGN NUM  (135)
	declaracion_For : ID . ASIGN ID  (136)

	ASIGN  shift 125
	.  error


state 86
	for : FOR '(' declaracion_For . ';' condicion ';' incremento ')' $$13 cuerpo_for  (125)
	for : FOR '(' declaracion_For . ';' condicion ';' incremento ';' condicion ')' $$14 cuerpo_for  (127)
	for : FOR '(' declaracion_For . condicion error  (130)
	for : FOR '(' declaracion_For . ';' condicion incremento error  (131)
	condicion : .  (122)

	SINGLE  shift 53
	ID  shift 54
	NUM  shift 55
	NUM_PAIR  shift 56
	OCTAL  shift 57
	'('  shift 73
	';'  shift 126
	'-'  shift 59
	error  reduce 122

	llamado_function  goto 61
	condicion  goto 127
	variable  goto 62
	valor  goto 76


state 87
	tipo : ID .  (102)

	.  reduce 102


state 88
	declaracion : TYPEDEF PAIR '<' . tipo '>' ID ';'  (68)
	declaracion : TYPEDEF PAIR '<' . tipo '>' ';' error  (71)

	ID  shift 87
	OCTAL_TYPE  shift 14
	PAIR_TYPE  shift 15
	ULONGINT_TYPE  shift 16
	SINGLE_TYPE  shift 17
	.  error

	tipo  goto 128


state 89
	declaracion : TYPEDEF PAIR tipo . ID ';' error  (70)

	ID  shift 129
	.  error


state 90
	declaracion : TYPEDEF '<' tipo . '>' error  (69)

	'>'  shift 130
	.  error


state 91
	retorno : tipo FUN error .  (10)

	.  reduce 10


state 92
	retorno : tipo FUN ID . '(' parametro ')' $$2 BEGIN function END  (9)

	'('  shift 131
	.  error


state 93
	retorno : tipo ID '(' . ')'  (12)

	')'  shift 132
	.  error


state 94
	declaracion : tipo lista_variables ASIGN . lista_operaciones ';'  (67)

	error  shift 52
	SINGLE  shift 53
	ID  shift 54
	NUM  shift 55
	NUM_PAIR  shift 56
	OCTAL  shift 57
	'-'  shift 59
	.  error

	operacion  goto 96
	llamado_function  goto 61
	lista_operaciones  goto 133
	variable  goto 62
	multi_div  goto 63
	valor  goto 64


state 95
	declaracion : tipo lista_variables ';' .  (66)

	.  reduce 66


state 96
	operacion : operacion . '+' multi_div  (79)
	operacion : operacion . '-' multi_div  (80)
	lista_operaciones : operacion .  (94)

	'+'  shift 105
	'-'  shift 106
	';'  reduce 94
	','  reduce 94


state 97
	asignacion : lista_variables ASIGN lista_operaciones . ';'  (72)
	lista_operaciones : lista_operaciones . ',' operacion  (95)

	';'  shift 134
	','  shift 135
	.  error


state 98
	lista_variables : lista_variables ',' error .  (75)

	.  reduce 75


state 99
	variable : ID .  (76)
	variable : ID . '{' NUM '}'  (77)
	variable : ID . '{' error  (78)

	'{'  shift 33
	ASIGN  reduce 76
	';'  reduce 76
	','  reduce 76


state 100
	lista_variables : lista_variables ',' variable .  (74)

	.  reduce 74


state 101
	valor : ID MULTILINE .  (90)

	.  reduce 90


state 102
	llamado_function : ID '(' ')' error .  (97)

	.  reduce 97


state 103
	valor : '-' valor .  (93)

	.  reduce 93


state 104
	llamado_function : ID '(' operacion ')' .  (96)

	.  reduce 96


state 105
	operacion : operacion '+' . multi_div  (79)

	error  shift 52
	SINGLE  shift 53
	ID  shift 54
	NUM  shift 55
	NUM_PAIR  shift 56
	OCTAL  shift 57
	'-'  shift 59
	.  error

	llamado_function  goto 61
	variable  goto 62
	multi_div  goto 136
	valor  goto 64


state 106
	operacion : operacion '-' . multi_div  (80)

	error  shift 52
	SINGLE  shift 53
	ID  shift 54
	NUM  shift 55
	NUM_PAIR  shift 56
	OCTAL  shift 57
	'-'  shift 59
	.  error

	llamado_function  goto 61
	variable  goto 62
	multi_div  goto 137
	valor  goto 64


state 107
	multi_div : multi_div '*' . valor  (82)

	SINGLE  shift 53
	ID  shift 54
	NUM  shift 55
	NUM_PAIR  shift 56
	OCTAL  shift 57
	'-'  shift 59
	.  error

	llamado_function  goto 61
	variable  goto 62
	valor  goto 138


state 108
	multi_div : multi_div '/' . valor  (83)

	SINGLE  shift 53
	ID  shift 54
	NUM  shift 55
	NUM_PAIR  shift 56
	OCTAL  shift 57
	'-'  shift 59
	.  error

	llamado_function  goto 61
	variable  goto 62
	valor  goto 139


state 109
	variable : ID '{' NUM '}' .  (77)

	.  reduce 77


state 110
	condicion : '(' condicion . ')'  (120)

	')'  shift 140
	.  error


state 111
	if : IF '(' condicion ')' . $$9 THEN cuerpo_if $$10 body_if  (41)
	$$9 : .  (39)

	.  reduce 39

	$$9  goto 141


state 112
	if : IF '(' palabras_reservadas error .  (43)

	.  reduce 43


state 113
	comp : error .  (119)

	.  reduce 119


state 114
	comp : NEQ .  (114)

	.  reduce 114


state 115
	comp : GE .  (117)

	.  reduce 117


state 116
	comp : LE .  (118)

	.  reduce 118


state 117
	comp : '<' .  (116)

	.  reduce 116


state 118
	comp : '>' .  (115)

	.  reduce 115


state 119
	comp : '=' .  (113)

	.  reduce 113


state 120
	condicion : valor valor .  (123)

	.  reduce 123


state 121
	condicion : valor comp . valor  (121)

	SINGLE  shift 53
	ID  shift 54
	NUM  shift 55
	NUM_PAIR  shift 56
	OCTAL  shift 57
	'-'  shift 59
	.  error

	llamado_function  goto 61
	variable  goto 62
	valor  goto 142


state 122
	print : OUTF '(' MULTILINE ')' . ';'  (59)

	';'  shift 143
	.  error


state 123
	print : OUTF '(' operacion ')' . ';'  (60)

	';'  shift 144
	.  error


state 124
	print : OUTF '(' palabras_reservadas ')' .  (61)

	.  reduce 61


state 125
	declaracion_For : ID ASIGN . NUM  (135)
	declaracion_For : ID ASIGN . ID  (136)

	ID  shift 145
	NUM  shift 146
	.  error


state 126
	for : FOR '(' declaracion_For ';' . condicion ';' incremento ')' $$13 cuerpo_for  (125)
	for : FOR '(' declaracion_For ';' . condicion ';' incremento ';' condicion ')' $$14 cuerpo_for  (127)
	for : FOR '(' declaracion_For ';' . condicion incremento error  (131)
	condicion : .  (122)

	SINGLE  shift 53
	ID  shift 54
	NUM  shift 55
	NUM_PAIR  shift 56
	OCTAL  shift 57
	'('  shift 73
	'-'  shift 59
	error  reduce 122
	UP  reduce 122
	DOWN  reduce 122
	';'  reduce 122

	llamado_function  goto 61
	condicion  goto 147
	variable  goto 62
	valor  goto 76


state 127
	for : FOR '(' declaracion_For condicion . error  (130)

	error  shift 148
	.  error


state 128
	declaracion : TYPEDEF PAIR '<' tipo . '>' ID ';'  (68)
	declaracion : TYPEDEF PAIR '<' tipo . '>' ';' error  (71)

	'>'  shift 149
	.  error


state 129
	declaracion : TYPEDEF PAIR tipo ID . ';' error  (70)

	';'  shift 150
	.  error


state 130
	declaracion : TYPEDEF '<' tipo '>' . error  (69)

	error  shift 151
	.  error


state 131
	retorno : tipo FUN ID '(' . parametro ')' $$2 BEGIN function END  (9)

	error  shift 152
	ID  shift 87
	OCTAL_TYPE  shift 14
	PAIR_TYPE  shift 15
	ULONGINT_TYPE  shift 16
	SINGLE_TYPE  shift 17
	.  error

	tipo  goto 153
	parametro  goto 154


state 132
	retorno : tipo ID '(' ')' .  (12)

	.  reduce 12


state 133
	declaracion : tipo lista_variables ASIGN lista_operaciones . ';'  (67)
	lista_operaciones : lista_operaciones . ',' operacion  (95)

	';'  shift 155
	','  shift 135
	.  error


state 134
	asignacion : lista_variables ASIGN lista_operaciones ';' .  (72)

	.  reduce 72


state 135
	lista_operaciones : lista_operaciones ',' . operacion  (95)

	error  shift 52
	SINGLE  shift 53
	ID  shift 54
	NUM  shift 55
	NUM_PAIR  shift 56
	OCTAL  shift 57
	'-'  shift 59
	.  error

	operacion  goto 156
	llamado_function  goto 61
	variable  goto 62
	multi_div  goto 63
	valor  goto 64


state 136
	operacion : operacion '+' multi_div .  (79)
	multi_div : multi_div . '*' valor  (82)
	multi_div : multi_div . '/' valor  (83)

	'*'  shift 107
	'/'  shift 108
	')'  reduce 79
	';'  reduce 79
	','  reduce 79
	'+'  reduce 79
	'-'  reduce 79


state 137
	operacion : operacion '-' multi_div .  (80)
	multi_div : multi_div . '*' valor  (82)
	multi_div : multi_div . '/' valor  (83)

	'*'  shift 107
	'/'  shift 108
	')'  reduce 80
	';'  reduce 80
	','  reduce 80
	'+'  reduce 80
	'-'  reduce 80


state 138
	multi_div : multi_div '*' valor .  (82)

	.  reduce 82


state 139
	multi_div : multi_div '/' valor .  (83)

	.  reduce 83


state 140
	condicion : '(' condicion ')' .  (120)

	.  reduce 120


state 141
	if : IF '(' condicion ')' $$9 . THEN cuerpo_if $$10 body_if  (41)

	THEN  shift 157
	.  error


state 142
	condicion : valor comp valor .  (121)

	.  reduce 121


state 143
	print : OUTF '(' MULTILINE ')' ';' .  (59)

	.  reduce 59


state 144
	print : OUTF '(' operacion ')' ';' .  (60)

	.  reduce 60


state 145
	declaracion_For : ID ASIGN ID .  (136)

	.  reduce 136


state 146
	declaracion_For : ID ASIGN NUM .  (135)

	.  reduce 135


state 147
	for : FOR '(' declaracion_For ';' condicion . ';' incremento ')' $$13 cuerpo_for  (125)
	for : FOR '(' declaracion_For ';' condicion . ';' incremento ';' condicion ')' $$14 cuerpo_for  (127)
	for : FOR '(' declaracion_For ';' condicion . incremento error  (131)

	error  shift 158
	UP  shift 159
	DOWN  shift 160
	';'  shift 161
	.  error

	incremento  goto 162


state 148
	for : FOR '(' declaracion_For condicion error .  (130)

	.  reduce 130


state 149
	declaracion : TYPEDEF PAIR '<' tipo '>' . ID ';'  (68)
	declaracion : TYPEDEF PAIR '<' tipo '>' . ';' error  (71)

	ID  shift 163
	';'  shift 164
	.  error


state 150
	declaracion : TYPEDEF PAIR tipo ID ';' . error  (70)

	error  shift 165
	.  error


state 151
	declaracion : TYPEDEF '<' tipo '>' error .  (69)

	.  reduce 69


state 152
	parametro : error . ID  (100)
	parametro : error .  (101)

	ID  shift 166
	')'  reduce 101


state 153
	parametro : tipo . ID  (98)
	parametro : tipo . error  (99)

	error  shift 167
	ID  shift 168
	.  error


state 154
	retorno : tipo FUN ID '(' parametro . ')' $$2 BEGIN function END  (9)

	')'  shift 169
	.  error


state 155
	declaracion : tipo lista_variables ASIGN lista_operaciones ';' .  (67)

	.  reduce 67

